postgresql-common (7) experimental; urgency=low

  * Fix warning when calling pg_wrapper with an invalid cluster.
  * PgCommon.pm, user_cluster_map(): If only one cluster exists, return that
    if no match is found in the map files.

 -- Martin Pitt <mpitt@debian.org>  Sat,  9 Apr 2005 18:46:05 +0200

postgresql-common (6) experimental; urgency=low

  * pg_dropcluster: Check if postmaster and autovacuum log file paths are
    defined before unlinking them to avoid a warning. Closes: #303259
  * pg_ctlcluster: Documented the autovacuum stuff in the POD.
  * debian/init.d-functions: Add autovacuum commands.
  * debian/maintscripts-functions: (Re)start/stop autovacuum daemons on
    configuration/removal of p-contrib-*.
  * pg_ctlcluster, autovacuum_start(): Check for already running daemon before
    starting a new one.
  * pg_createcluster: Add an explicit "local all" entry for the database
    superuser to pg_hba.conf. Closes: #303274

 -- Martin Pitt <mpitt@debian.org>  Wed,  6 Apr 2005 20:59:28 +0200

postgresql-common (5) experimental; urgency=low

  * PgCommon.pm: Internalize get/set_conf_value, export get/set_cluster_port
    instead.
  * pg_ctlcluster: Integrated pg_autovacuum startup if -contrib is installed
    (based on some patches from Adam R. Skutt, thanks).
  * pg_createcluster: Create autovacuum_log symlink and log file.
  * pg_dropcluster: Remove autovacuum_log symlink and log file.
  * PgCommon.pm: If a configuration file is not found in the cluster conf dir,
    fall back to the one in /etc/postgresql-common.
  * Install /etc/postgresql-common/autovacuum.conf as a fallback default
    configuration file for pg_autovacuum.

 -- Martin Pitt <mpitt@debian.org>  Sun,  3 Apr 2005 09:10:27 +0200

postgresql-common (4) experimental; urgency=low

  * pg_upgradecluster: Uncomment library search path (artifact from
    debugging).
  * debian/postgresql-common.postinst: Don't create postgres user with home /,
    this can lead to problems sometimes.