@@ -4,9 +4,3 @@ postgresql TODO
 Provide do.maintenance which vacuums all running clusters.
 
 recheck ports of already existing clusters on installation (might collide)
-
-document autovacuum stuff in architecture.html and POD
-
-start postmaster under the locale used by initdb
-
-ship reindexdb in -contrib
