@@ -3,8 +3,11 @@ postgresql-common (7) experimental; urgency=low
   * Fix warning when calling pg_wrapper with an invalid cluster.
   * PgCommon.pm, user_cluster_map(): If only one cluster exists, return that
     if no match is found in the map files.
+  * pg_ctlcluster: Start the postmaster under the locale that was used with
+    initdb.
+  * Updated documentation in architecture.html.
 
- -- Martin Pitt <mpitt@debian.org>  Sat,  9 Apr 2005 18:46:05 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 16 Apr 2005 20:28:03 +0200
 
 postgresql-common (6) experimental; urgency=low
 
